--- a/_includes/js.html
+++ b/_includes/js.html
@@ -5,5 +5,5 @@
 <script type="text/javascript" src="{{ site.baseurl }}public/js/bigfoot.min.js"></script>
 
  <script type="text/javascript">
-	$.bigfoot();
+	$.bigfoot({numberResetSelector: ".article-container"});
  </script>
