--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,9 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+  <br>
+  <br>
+  <span class="post-date">See more posts tagged: {% for tag in page.tags %} <a href="/tag/{{ tag }}">{{ tag }}</a> {% endfor %}</span>
   {% include comments.html %}
 </div>
 
@@ -17,8 +20,8 @@ layout: default
         <h3>
           <a href="{{ post.url }}">
             {{ post.title }}
+            </a>
             <small>{{ post.date | date_to_string }}</small>
-          </a>
         </h3>
       </li>
     {% endfor %}
