--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -57,7 +57,7 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background-color: #202020;
+  background: #000;
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -79,7 +79,7 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
+  font-family: "Futura", sans-serif;
   font-size: 3.25rem;
 }
 
